<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".register_activity"
    tools:ignore="ExtraText"
    android:screenOrientation="portrait">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="131dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/aplify"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="1.0" >

        <Button
            android:id="@+id/button4"
            android:layout_width="237dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button2"
            android:onClick="initSecAct"
            android:text="@string/enviar"
            android:layout_margin="50dp"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="goToMainActivity"
            android:text="@string/volver"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="248dp"
        android:layout_height="49dp"
        android:text="@string/direccionEmail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445"
        tools:ignore="MissingConstraints,TextContrastCheck,TextSizeCheck" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="233dp"
        android:layout_height="28dp"
        android:background="@color/transparency"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:textColorHint="@color/grey_transparent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.036"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="322dp"
        android:layout_height="52dp"
        android:text="@string/porFavor"
        android:textAlignment="center"
        android:textColor="@color/lowColorText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.943"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="102dp"
        android:layout_height="70dp"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578"
        app:srcCompat="@drawable/mail"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperarCuenta"
        android:textColor="@color/lowColorText"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
